--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,6 @@ categories = ["command-line-utilities"]
 tar = "0.4.26"
 glob = "0.3.0"
 clap = "2.33.0"
-xz2 = { git = "https://github.com/hjiayz/xz2-rs.git" }
+xz2 = { git = "https://github.com/hjiayz/xz2-rs.git" , version = "0.1.6" }
 zstd = "0.5.1"
 flate2 = "1.0.13"
