--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["hjiayz <hjiayz@gmail.com>"]
 edition = "2018"
 description = "simple tar archive compression/decompression tool"
-keywords = ["tar", "glob", "xz", "xz2", "zst", "zstd", "gzip", "gz"]
+keywords = ["tar", "glob", "xz", "zstd", "gzip"]
 license = "GPLv3"
 readme = "README.md"
 categories = ["command-line-utilities"]
