--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["hjiayz <hjiayz@gmail.com>"]
 edition = "2018"
 description = "simple tar archive compression/decompression tool"
 keywords = ["tar", "glob", "xz", "zstd", "gzip"]
-license = "GPLv3"
+license = "GPL-3.0-only"
 readme = "README.md"
 categories = ["command-line-utilities"]
 repository = "https://github.com/hjiayz/star.git"
