--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,10 @@ os:
   - osx
   - windows
 
-rust:
-  - stable
-
 install:
   - rustup component add rustfmt
   - rustfmt -V
+  - gcc -version
 
 script:
   - cargo fmt --all -- --check
