--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
 - |-
     case $TRAVIS_OS_NAME in
       windows)
-        choco upgrade mingw --version=6.4.0
+        choco upgrade mingw --version=6.4.0 --force
         ;;
     esac
     
