--- a/.travis.yml
+++ b/.travis.yml
@@ -32,13 +32,13 @@ script:
   - cargo fmt --all -- --check
   - cargo test
   - cargo build -j 1 --release
-  - cargo run --release -- c $TRAVIS_OS_NAME-$TRAVIS_CPU_ARCH-$TRAVIS_RUST_VERSION.xz from star star.exe to ./
+  - cargo run --release -- c star-$TRAVIS_OS_NAME-$TRAVIS_CPU_ARCH-$TRAVIS_RUST_VERSION.xz from star star.exe to ./
 deploy:
   provider: releases
   # ⋮
   edge: true
   api_key: $GITHUB_TOKEN
-  file: $TRAVIS_OS_NAME-$TRAVIS_CPU_ARCH-$TRAVIS_RUST_VERSION.7z
+  file: star-$TRAVIS_OS_NAME-$TRAVIS_CPU_ARCH-$TRAVIS_RUST_VERSION.xz
   skip_cleanup: true
   on:
     tags: true
